--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -5,41 +5,58 @@
     <title>Phil Salant Recipe</title>
   </head>
   <body>
-    <h1>Pancakes Recipe</h1>
+    <header>
+      <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo"/>
+      <nav>
+        <ul>
+          <li><a href="#description">Description</a></li>
+          <li><a href="#ingredients">Ingredients</a></li>
+          <li><a href="#directions">Directions</a></li>
+        </ul>
+      </nav>
+      <aside>
+        <h2>Ingredients</h2>
+        <a name="ingredients"/>
+        <ul>
+          <li>1 cup flour</li>
+          <li>1 teaspoon salt</li>
+          <li>1 teaspoon baking soda</li>
+          <li>1 egg</li>
+          <li>1 1/8 cups buttermilk</li>
+          <li>2 tablespoons melted butter</li>
+        </ul>
+      </aside>
+    </header>
     <h2>Buttermilk Pancakes</h2>
-    <ul>
-      <a href="#description">Description</a>
-      <a href="#ingredients">Ingredients</a>
-      <a href="#directions">Directions</a>
-    </ul>
-    <a name="decription"/>
-    <h2>Description</h2>
-    <p>
-      Light and fluffy, these are classic
-      <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
-      !
-    </p>
-    <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
-    <a name="ingredients"/>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 cup flour</li>
-      <li>1 teaspoon salt</li>
-      <li>1 teaspoon baking soda</li>
-      <li>1 egg</li>
-      <li>1 1/8 cups buttermilk</li>
-      <li>2 tablespoons melted butter</li>
-    </ul>
-    <a name="directions"/>
-    <h2>Directions</h2>
-    <ol>
-      <li>Preheat and lightly grease a large skillet</li>
-      <li>Mix the flour, salt, and baking soda together in a bowl</li>
-      <li>Add the egg, buttermilk, and butter; stir together lightly</li>
-      <li>The batter should look thick, spongy, and puffy</li>
-      <li>Drop 1/3 cup of the batter onto the cooking surface, spreading with the bottom of the cup</li>
-      <li>Cook until lightly-browned on each side, 1 to 2 minutes per</li>
-    </ol>
+    <section>
+      <a name="decription"/>
+      <h2>Description</h2>
+      <p>
+        Light and fluffy, these are classic buttermilk pancakes!
+      </p>
+
+      <figure>
+        <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
+      </figure>
+      <figcaption>
+        <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
+      </figcaption>
+      <a name="directions"/>
+      <h2>Directions</h2>
+      <ol>
+        <li>Preheat and lightly grease a large skillet</li>
+        <li>Mix the flour, salt, and baking soda together in a bowl</li>
+        <li>Add the egg, buttermilk, and butter; stir together lightly</li>
+        <li>The batter should look thick, spongy, and puffy</li>
+        <li>Drop 1/3 cup of the batter onto the cooking surface, spreading with the bottom of the cup</li>
+        <li>Cook until lightly-browned on each side, 1 to 2 minutes per</li>
+      </ol>
+    </section>
+    <footer>
+      <p>
+        Original recipe definitely came from somewhere!
+      </p>
+    </footer>
     <!--Orginal recipe author: Phil Salant-->
   </body>
 </html>
