Finish HTML/CSS curriculum day 2

--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo"/>
+
       <nav>
         <ul>
           <li><a href="#description">Description</a></li>
@@ -14,6 +15,7 @@
           <li><a href="#directions">Directions</a></li>
         </ul>
       </nav>
+
       <aside>
         <h2>Ingredients</h2>
         <a name="ingredients"/>
@@ -27,20 +29,22 @@
         </ul>
       </aside>
     </header>
+
     <h2>Buttermilk Pancakes</h2>
+
     <section>
       <a name="decription"/>
       <h2>Description</h2>
-      <p>
-        Light and fluffy, these are classic buttermilk pancakes!
-      </p>
+      <p>Light and fluffy, these are classic buttermilk pancakes!</p>
 
       <figure>
         <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
       </figure>
+
       <figcaption>
         <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
       </figcaption>
+
       <a name="directions"/>
       <h2>Directions</h2>
       <ol>
@@ -52,11 +56,13 @@
         <li>Cook until lightly-browned on each side, 1 to 2 minutes per</li>
       </ol>
     </section>
+
     <footer>
       <p>
         Original recipe definitely came from somewhere!
       </p>
     </footer>
+
     <!--Orginal recipe author: Phil Salant-->
   </body>
 </html>
