--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Phil Salant's Pancake Recipe</title>
+    <meta name="description" content="A simple pancake recipe for delicous fluffy pancakes!">
     <meta charset="utf-8">
-    <title>Phil Salant Recipe</title>
+    <script type="text/javascript" src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css" type="text/css"></link>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-12345678-9', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
+
   <body>
     <header>
       <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo"/>
@@ -59,30 +73,28 @@
 
     <section id="reviews">
       <h2>Reviews</h2>
-      <form action="/reviews" method="POST">
-        <label for="reviewer" id="reviewer">Name</label>
-        <input type="text" id="reviewer"/>
+      <form id="review-form" action="/reviews" method="POST">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name"/>
 
-        <label for="rating">Rating
+        <label for="rating">Rating</label>
           1<input type="radio" name="rating" value="1" checked>
           2<input type="radio" name="rating" value="2">
           3<input type="radio" name="rating" value="3">
           4<input type="radio" name="rating" value="4">
           5<input type="radio" name="rating" value="5">
-        </label>
 
-        <label for="expertise">Cooking Expertise
+        <label for="expertise">Cooking Expertise</label>
           <select id="expertise" name="expertise">
-            <option selected disabled="true">Select Cooking Expertise</option>
+            <option value="Select Cooking Expertise" selected="true" disabled="true">Select Cooking Expertise</option>
             <option value="Sometimes Cook">Sometimes Cook</option>
             <option value="Cook Everyday">Cook Everyday</option>
             <option value="Cooking is a Hobby">Cooking is a Hobby</option>
             <option value="Professional Chef">Professional Chef</option>
           </select>
-        </label>
 
         <label>Review
-          <textarea name="review" cols="30" rows="10"></textarea>
+          <textarea id="review" name="review" cols="30" rows="10"></textarea>
         </label>
 
         <input type="submit" value="Submit Review">
