--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" type="text/css"></link>
+    <link rel="stylesheet" href="./css_day_2.css" type="text/css"></link>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,7 +34,7 @@
       <aside>
         <h2>Ingredients</h2>
         <a name="ingredients"/>
-        <ul>
+        <ul class="ingredients-list">
           <li>1 cup flour</li>
           <li>1 teaspoon salt</li>
           <li>1 teaspoon baking soda</li>
