--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -4,18 +4,16 @@
     <title>Phil Salant's Pancake Recipe</title>
     <meta name="description" content="A simple pancake recipe for delicous fluffy pancakes!">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./css_custom_reset.css" type="text/css"></link>
+    <link rel="stylesheet" href="./css_day_4.css" type="text/css"></link>
     <script type="text/javascript" src="./script.js"></script>
-    <link rel="stylesheet" href="./style.css" type="text/css"></link>
-    <link rel="stylesheet" href="./css_day_2.css" type="text/css"></link>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-12345678-9', 'auto');
       ga('send', 'pageview');
-
     </script>
   </head>
 
@@ -30,22 +28,22 @@
           <li><a href="#directions">Directions</a></li>
         </ul>
       </nav>
-
-      <aside>
-        <h2>Ingredients</h2>
-        <a name="ingredients"/>
-        <ul class="ingredients-list">
-          <li>1 cup flour</li>
-          <li>1 teaspoon salt</li>
-          <li>1 teaspoon baking soda</li>
-          <li>1 egg</li>
-          <li>1 1/8 cups buttermilk</li>
-          <li>2 tablespoons melted butter</li>
-        </ul>
-      </aside>
     </header>
 
-    <h2>Buttermilk Pancakes</h2>
+    <aside>
+      <h2>Ingredients</h2>
+      <a name="ingredients"/>
+      <ul class="ingredients-list">
+        <li>1 cup flour</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1 egg</li>
+        <li>1 1/8 cups buttermilk</li>
+        <li>2 tablespoons melted butter</li>
+      </ul>
+    </aside>
+
+    <h1>Buttermilk Pancakes</h1>
 
     <section>
       <a name="decription"/>
