--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -5,7 +5,8 @@
     <meta name="description" content="A simple pancake recipe for delicous fluffy pancakes!">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css_custom_reset.css" type="text/css"></link>
-    <link rel="stylesheet" href="./css_day_4.css" type="text/css"></link>
+    <link rel="stylesheet" href="./css_custom_grid.css"type="text/CSS">
+    <link rel="stylesheet" href="./css_day_5.css" type="text/css"></link>
     <script type="text/javascript" src="./script.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -30,75 +31,77 @@
       </nav>
     </header>
 
-    <aside>
-      <h2>Ingredients</h2>
-      <a name="ingredients"/>
-      <ul class="ingredients-list">
-        <li>1 cup flour</li>
-        <li>1 teaspoon salt</li>
-        <li>1 teaspoon baking soda</li>
-        <li>1 egg</li>
-        <li>1 1/8 cups buttermilk</li>
-        <li>2 tablespoons melted butter</li>
-      </ul>
-    </aside>
+    <div class="col col-1-3">
+      <aside>
+        <h2>Ingredients</h2>
+        <a name="ingredients"/>
 
-    <h1>Buttermilk Pancakes</h1>
+        <ul class="ingredients-list">
+          <li>1 cup flour</li>
+          <li>1 teaspoon salt</li>
+          <li>1 teaspoon baking soda</li>
+          <li>1 egg</li>
+          <li>1 1/8 cups buttermilk</li>
+          <li>2 tablespoons melted butter</li>
+        </ul>
+      </aside>
+    </div>
 
-    <section>
-      <a name="decription"/>
-      <h2>Description</h2>
-      <p>Light and fluffy, these are classic buttermilk pancakes!</p>
+    <div class="col col-2-3">
+      <section>
+        <h1>Buttermilk Pancakes</h1>
 
-      <figure>
-        <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
-      </figure>
+        <figure>
+          <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
+          <figcaption>
+            <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
+          </figcaption>
+        </figure>
 
-      <figcaption>
-        <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
-      </figcaption>
+        <h2>Description</h2>
+        <a name="decription"/>
+        <p>Light and fluffy, these are classic buttermilk pancakes!</p>
 
-      <a name="directions"/>
-      <h2>Directions</h2>
-      <ol>
-        <li>Preheat and lightly grease a large skillet</li>
-        <li>Mix the flour, salt, and baking soda together in a bowl</li>
-        <li>Add the egg, buttermilk, and butter; stir together lightly</li>
-        <li>The batter should look thick, spongy, and puffy</li>
-        <li>Drop 1/3 cup of the batter onto the cooking surface, spreading with the bottom of the cup</li>
-        <li>Cook until lightly-browned on each side, 1 to 2 minutes per</li>
-      </ol>
-    </section>
+        <h2>Directions</h2>
+        <a name="directions"/>
+        <ol>
+          <li>Preheat and lightly grease a large skillet</li>
+          <li>Mix the flour, salt, and baking soda together in a bowl</li>
+          <li>Add the egg, buttermilk, and butter; stir together lightly</li>
+          <li>The batter should look thick, spongy, and puffy</li>
+          <li>Drop 1/3 cup of the batter onto the cooking surface, spreading with the bottom of the cup</li>
+          <li>Cook until lightly-browned on each side, 1 to 2 minutes per</li>
+        </ol>
 
-    <section id="reviews">
-      <h2>Reviews</h2>
-      <form id="review-form" action="/reviews" method="POST">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name"/>
+        <section id="reviews">
+          <h2>Reviews</h2>
+          <form id="review-form" action="/reviews" method="post">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" class="col-1-3">
 
-        <label for="rating">Rating</label>
-          1<input type="radio" name="rating" value="1" checked>
-          2<input type="radio" name="rating" value="2">
-          3<input type="radio" name="rating" value="3">
-          4<input type="radio" name="rating" value="4">
-          5<input type="radio" name="rating" value="5">
+              1<input type="radio" name="rating" value="1" checked>
+              2<input type="radio" name="rating" value="2">
+              3<input type="radio" name="rating" value="3">
+              4<input type="radio" name="rating" value="4">
+              5<input type="radio" name="rating" value="5">
 
-        <label for="expertise">Cooking Expertise</label>
-          <select id="expertise" name="expertise">
-            <option value="Select Cooking Expertise" selected="true" disabled="true">Select Cooking Expertise</option>
-            <option value="Sometimes Cook">Sometimes Cook</option>
-            <option value="Cook Everyday">Cook Everyday</option>
-            <option value="Cooking is a Hobby">Cooking is a Hobby</option>
-            <option value="Professional Chef">Professional Chef</option>
-          </select>
+            <select id="expertise" name="expertise" class="col-1-3">
+              <option value="Select Cooking Expertise" selected="true" disabled="true">Select Cooking Expertise</option>
+              <option value="Sometimes Cook">Sometimes Cook</option>
+              <option value="Cook Everyday">Cook Everyday</option>
+              <option value="Cooking is a Hobby">Cooking is a Hobby</option>
+              <option value="Professional Chef">Professional Chef</option>
+            </select>
 
-        <label>Review
-          <textarea id="review" name="review" cols="30" rows="10"></textarea>
-        </label>
+            <label class="col-2-3">
+              <textarea id="review" name="review" cols="30" rows="10"></textarea>
+            </label>
 
-        <input type="submit" value="Submit Review">
-      </form>
-    </section>
+            <input type="submit" value="Submit Review">
+          </form>
+        </section>
+      </section>
+    </div>
 
     <footer>
       <p>
