--- a/Homework/html_css_curriculum/phil_salant_pancakes.html
+++ b/Homework/html_css_curriculum/phil_salant_pancakes.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css_custom_reset.css" type="text/css"></link>
     <link rel="stylesheet" href="./css_custom_grid.css"type="text/CSS">
-    <link rel="stylesheet" href="./css_day_5.css" type="text/css"></link>
+    <link rel="stylesheet" href="./css_day_6.css" type="text/css"></link>
     <script type="text/javascript" src="./script.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="cf">
       <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo"/>
 
       <nav>
@@ -28,13 +28,22 @@
           <li><a href="#ingredients">Ingredients</a></li>
           <li><a href="#directions">Directions</a></li>
         </ul>
+        <ul class="hamburger-dropdown">
+          <li>
+          <ul>
+            <li><a href="#Description">Description</a></li>
+            <li><a href="#Ingredients">Ingredients</a></li>
+            <li><a href="#Directions">Directions</a></li>
+          </ul>
+          </li>
+        </ul>
       </nav>
     </header>
 
     <div class="col col-1-3">
       <aside>
         <h2>Ingredients</h2>
-        <a name="ingredients"/>
+        <a name="ingredients"></a>
 
         <ul class="ingredients-list">
           <li>1 cup flour</li>
@@ -52,9 +61,10 @@
         <h1>Buttermilk Pancakes</h1>
 
         <figure>
-          <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"/>
+          <img src="http://images.media-allrecipes.com/userphotos/250x250/528740.jpg"
+            alt="Buttermilf Pancakes Recipe">
           <figcaption>
-            <a href="https://en.wikipedia.org/wiki/Pancake">buttermilk pancakes</a>
+            <a href="https://en.wikipedia.org/wiki/Pancake">Buttermilk Pancakes</a>
           </figcaption>
         </figure>
 
@@ -75,33 +85,33 @@
 
         <section id="reviews">
           <h2>Reviews</h2>
-          <form id="review-form" action="/reviews" method="post">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" class="col-1-3">
+            <form id="review-form" action="/reviews" method="post">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" class="col-1-3">
 
-              1<input type="radio" name="rating" value="1" checked>
-              2<input type="radio" name="rating" value="2">
-              3<input type="radio" name="rating" value="3">
-              4<input type="radio" name="rating" value="4">
-              5<input type="radio" name="rating" value="5">
+                1<input type="radio" name="rating" value="1" checked>
+                2<input type="radio" name="rating" value="2">
+                3<input type="radio" name="rating" value="3">
+                4<input type="radio" name="rating" value="4">
+                5<input type="radio" name="rating" value="5">
 
-            <select id="expertise" name="expertise" class="col-1-3">
-              <option value="Select Cooking Expertise" selected="true" disabled="true">Select Cooking Expertise</option>
-              <option value="Sometimes Cook">Sometimes Cook</option>
-              <option value="Cook Everyday">Cook Everyday</option>
-              <option value="Cooking is a Hobby">Cooking is a Hobby</option>
-              <option value="Professional Chef">Professional Chef</option>
-            </select>
+              <select id="expertise" name="expertise" class="col-1-3">
+                <option value="Select Cooking Expertise" selected="true" disabled="true">Select Cooking Expertise</option>
+                <option value="Sometimes Cook">Sometimes Cook</option>
+                <option value="Cook Everyday">Cook Everyday</option>
+                <option value="Cooking is a Hobby">Cooking is a Hobby</option>
+                <option value="Professional Chef">Professional Chef</option>
+              </select>
 
-            <label class="col-2-3">
-              <textarea id="review" name="review" cols="30" rows="10"></textarea>
-            </label>
+              <label class="col-2-3">
+                <textarea id="review" name="review" cols="30" rows="10"></textarea>
+              </label>
 
-            <input type="submit" value="Submit Review">
-          </form>
+              <input type="submit" value="Submit Review">
+            </form>
+          </section>
         </section>
-      </section>
-    </div>
+      </div>
 
     <footer>
       <p>
